<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulLogo"
    tools:context="com.serviayuda.pc.serviayuda.Actividades.Inicio"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/iniciosesion_1"
            android:textColor="@color/blanco"
            android:textSize="@dimen/_40sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/iniciosesion_2"
                android:textColor="@color/blanco"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/iniciosesion_3"
                android:textSize="10dp"
                android:id="@+id/inicioSesionEmail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/iniciosesion_4"
                android:textColor="@color/blanco"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/iniciosesion_5"
                android:inputType="textPassword"
                android:textSize="10dp"
                android:id="@+id/inicioSesionPassword"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/checkbox1Sesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciosesion_7"/>
            </LinearLayout>

            <Button
                android:id="@+id/inicioSesionEntrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:text="@string/iniciosesion_6"
                android:textColor="@color/azulLogo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/inicioSesionResultado"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/blanco" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>