<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulLogo"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textInterfaz"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="@string/ajustes_1"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchInterfaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp" />

        <TextView
            android:id="@+id/SNInterfaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/si"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="@string/ajustes_2"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp" />

        <TextView
            android:id="@+id/SNSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/no"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/ajustes_3"
            android:textColor="@color/azulLogo"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
