<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulLogo"
    tools:context="com.serviayuda.pc.serviayuda.Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/registro_1"
            android:textColor="@color/blanco"
            android:textSize="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/registro_2"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/registroNombre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/registro_2"
                android:textSize="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/registro_3"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/registroEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/registro_4"
                android:textSize="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/registro_5"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/registroPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/registro_5"
                android:inputType="textPassword"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/botonFinalizaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/registro_6"
                android:textColor="@color/azulLogo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/registroResultado"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/blanco" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>