<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulLogo"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_150sdp"
        android:gravity="center"
        android:padding="@dimen/_15sdp"
        android:text="@string/dialog_limpieza_1"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:textSize="@dimen/_30sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:paddingBottom="@dimen/_30sdp"
        android:gravity="center">

        <Button
            android:id="@+id/limpiezaSi"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@color/blanco"
            android:text="@string/SI"
            android:textColor="#000"
            android:textSize="@dimen/_60sdp" />

        <Button
            android:id="@+id/limpiezaNo"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@color/blanco"
            android:text="@string/NO"
            android:textColor="#000"
            android:textSize="@dimen/_60sdp" />
    </LinearLayout>
</LinearLayout>