<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_3sdp"
    android:layout_marginTop="@dimen/_3sdp"
    android:background="@color/azulLogo"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vistasolicitudadapt_1"
                android:textColor="@color/blanco"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vistaSolicitudAdaptNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center">

        <Button
            android:id="@+id/vistaSolicitudAdaptPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:text="@string/vistasolicitudadapt_2"
            android:backgroundTint="@color/blanco"
            android:textColor="@color/azulLogo"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/vistaSolicitudAdaptAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:text="@string/vistasolicitudadapt_3"
            android:backgroundTint="@color/blanco"
            android:textColor="@color/azulLogo"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/vistaSolicitudAdaptRechazar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vistasolicitudadapt_4"
            android:backgroundTint="@color/blanco"
            android:textColor="@color/azulLogo"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>